--- a/index.html
+++ b/index.html
@@ -4,79 +4,159 @@
   <meta charset="utf-8">
   <title>Space Empire</title>
   <style>
-    body { margin: 0; background: black; color: white; }
-    canvas { display: block; }
+    body {
+      margin: 0;
+      background: black;
+      color: white;
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+    }
+    #hud {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      font-family: sans-serif;
+      font-size: 14px;
+      background: rgba(0,0,0,0.5);
+      padding: 6px 10px;
+      border-radius: 4px;
+    }
   </style>
 </head>
 <body>
-  <canvas id="game"></canvas>
 
-  <script>
-    // =========================
-  // GLOBAL SIMULATION
-  // =========================
-  const Simulation = {
-    paused: false,
-    speed: 1,
-    stars: []
-  };
+<canvas id="game"></canvas>
+<div id="hud">
+  🌌 Galaxy View<br>
+  SPACE = Pause<br>
+  Drag = Pan<br>
+  Wheel = Zoom
+</div>
 
-  // =========================
-  // CANVAS SETUP
-  // =========================
-  const canvas = document.getElementById("game");
-  const ctx = canvas.getContext("2d");
+<script>
+/* =========================
+   GLOBAL SIMULATION
+========================= */
+const Simulation = {
+  paused: false,
+  speed: 1,
+  stars: [],
+  camera: {
+    x: 0,
+    y: 0,
+    zoom: 1
+  }
+};
 
-  function resize() {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
+/* =========================
+   CANVAS SETUP
+========================= */
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
+
+function resize() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+}
+window.addEventListener("resize", resize);
+resize();
+
+/* =========================
+   GALAXY GENERATION
+========================= */
+function generateGalaxy(count = 150) {
+  Simulation.stars = [];
+  for (let i = 0; i < count; i++) {
+    Simulation.stars.push({
+      x: Math.random() * 4000 - 2000,
+      y: Math.random() * 4000 - 2000
+    });
+  }
+}
+generateGalaxy();
+
+/* =========================
+   INPUT (CAMERA + PAUSE)
+========================= */
+let dragging = false;
+let lastX = 0;
+let lastY = 0;
+
+canvas.addEventListener("mousedown", e => {
+  dragging = true;
+  lastX = e.clientX;
+  lastY = e.clientY;
+});
+
+window.addEventListener("mouseup", () => {
+  dragging = false;
+});
+
+window.addEventListener("mousemove", e => {
+  if (!dragging) return;
+
+  const dx = (e.clientX - lastX) / Simulation.camera.zoom;
+  const dy = (e.clientY - lastY) / Simulation.camera.zoom;
+
+  Simulation.camera.x -= dx;
+  Simulation.camera.y -= dy;
+
+  lastX = e.clientX;
+  lastY = e.clientY;
+});
+
+canvas.addEventListener("wheel", e => {
+  const zoomChange = -e.deltaY * 0.001;
+  Simulation.camera.zoom = Math.max(
+    0.2,
+    Math.min(5, Simulation.camera.zoom + zoomChange)
+  );
+});
+
+window.addEventListener("keydown", e => {
+  if (e.code === "Space") {
+    Simulation.paused = !Simulation.paused;
+  }
+});
+
+/* =========================
+   MAIN LOOP
+========================= */
+function loop() {
+  ctx.fillStyle = "black";
+  ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+  ctx.fillStyle = "white";
+  for (const star of Simulation.stars) {
+    const sx =
+      (star.x - Simulation.camera.x) * Simulation.camera.zoom +
+      canvas.width / 2;
+    const sy =
+      (star.y - Simulation.camera.y) * Simulation.camera.zoom +
+      canvas.height / 2;
+
+    if (sx < -10 || sy < -10 || sx > canvas.width + 10 || sy > canvas.height + 10) {
+      continue;
+    }
+
+    ctx.beginPath();
+    ctx.arc(
+      sx,
+      sy,
+      2 * Simulation.camera.zoom,
+      0,
+      Math.PI * 2
+    );
+    ctx.fill();
   }
 
-  window.addEventListener("resize", resize);
-  resize();
+  requestAnimationFrame(loop);
+}
 
-  // =========================
-  // GALAXY GENERATION
-  // =========================
-  function generateGalaxy(count = 100) {
-    Simulation.stars = [];
-    for (let i = 0; i < count; i++) {
-      Simulation.stars.push({
-        x: Math.random() * canvas.width,
-        y: Math.random() * canvas.height
-      });
-    }
-  }
+loop();
+</script>
 
-  generateGalaxy();
-
-  // =========================
-  // INPUT (PAUSE)
-  // =========================
-  window.addEventListener("keydown", e => {
-    if (e.code === "Space") {
-      Simulation.paused = !Simulation.paused;
-    }
-  });
-
-  // =========================
-  // MAIN LOOP
-  // =========================
-  function loop() {
-    ctx.fillStyle = "black";
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-    ctx.fillStyle = "white";
-    for (const star of Simulation.stars) {
-      ctx.beginPath();
-      ctx.arc(star.x, star.y, 2, 0, Math.PI * 2);
-      ctx.fill();
-    }
-
-    requestAnimationFrame(loop);
-  }
-
-  loop();
-  </script>
 </body>
 </html>
