--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="utf-8">
   <title>Space Empire</title>
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden; /* CRITICAL */
       background: black;
       color: white;
-      overflow: hidden;
     }
     canvas {
       display: block;
@@ -19,20 +22,22 @@
       left: 10px;
       font-family: sans-serif;
       font-size: 14px;
-      background: rgba(0,0,0,0.5);
-      padding: 6px 10px;
+      background: rgba(0,0,0,0.6);
+      padding: 8px 10px;
       border-radius: 4px;
+      user-select: none;
     }
   </style>
 </head>
 <body>
 
 <canvas id="game"></canvas>
+
 <div id="hud">
   🌌 Galaxy View<br>
-  SPACE = Pause<br>
   Drag = Pan<br>
-  Wheel = Zoom
+  Wheel = Zoom<br>
+  SPACE = Pause
 </div>
 
 <script>
@@ -41,7 +46,7 @@
 ========================= */
 const Simulation = {
   paused: false,
-  speed: 1,
+  time: 0,
   stars: [],
   camera: {
     x: 0,
@@ -66,19 +71,19 @@ resize();
 /* =========================
    GALAXY GENERATION
 ========================= */
-function generateGalaxy(count = 150) {
+function generateGalaxy(count = 200) {
   Simulation.stars = [];
   for (let i = 0; i < count; i++) {
     Simulation.stars.push({
-      x: Math.random() * 4000 - 2000,
-      y: Math.random() * 4000 - 2000
+      x: Math.random() * 5000 - 2500,
+      y: Math.random() * 5000 - 2500
     });
   }
 }
 generateGalaxy();
 
 /* =========================
-   INPUT (CAMERA + PAUSE)
+   INPUT HANDLING
 ========================= */
 let dragging = false;
 let lastX = 0;
@@ -108,12 +113,11 @@ window.addEventListener("mousemove", e => {
 });
 
 canvas.addEventListener("wheel", e => {
-  const zoomChange = -e.deltaY * 0.001;
-  Simulation.camera.zoom = Math.max(
-    0.2,
-    Math.min(5, Simulation.camera.zoom + zoomChange)
-  );
-});
+  e.preventDefault(); // CRITICAL
+  const zoomFactor = 1 - e.deltaY * 0.001;
+  Simulation.camera.zoom *= zoomFactor;
+  Simulation.camera.zoom = Math.max(0.2, Math.min(5, Simulation.camera.zoom));
+}, { passive: false });
 
 window.addEventListener("keydown", e => {
   if (e.code === "Space") {
@@ -122,9 +126,18 @@ window.addEventListener("keydown", e => {
 });
 
 /* =========================
-   MAIN LOOP
+   MAIN LOOP (TIME-DRIVEN)
 ========================= */
-function loop() {
+let lastTime = performance.now();
+
+function loop(now) {
+  const delta = (now - lastTime) / 1000;
+  lastTime = now;
+
+  if (!Simulation.paused) {
+    Simulation.time += delta;
+  }
+
   ctx.fillStyle = "black";
   ctx.fillRect(0, 0, canvas.width, canvas.height);
 
@@ -137,25 +150,27 @@ function loop() {
       (star.y - Simulation.camera.y) * Simulation.camera.zoom +
       canvas.height / 2;
 
-    if (sx < -10 || sy < -10 || sx > canvas.width + 10 || sy > canvas.height + 10) {
-      continue;
-    }
+    if (
+      sx < -20 || sy < -20 ||
+      sx > canvas.width + 20 || sy > canvas.height + 20
+    ) continue;
 
     ctx.beginPath();
-    ctx.arc(
-      sx,
-      sy,
-      2 * Simulation.camera.zoom,
-      0,
-      Math.PI * 2
-    );
+    ctx.arc(sx, sy, 2 * Simulation.camera.zoom, 0, Math.PI * 2);
     ctx.fill();
+  }
+
+  // Pause indicator
+  if (Simulation.paused) {
+    ctx.fillStyle = "rgba(255,255,255,0.8)";
+    ctx.font = "20px sans-serif";
+    ctx.fillText("PAUSED", canvas.width / 2 - 40, canvas.height / 2);
   }
 
   requestAnimationFrame(loop);
 }
 
-loop();
+requestAnimationFrame(loop);
 </script>
 
 </body>
