--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       padding: 0;
       width: 100%;
       height: 100%;
-      overflow: hidden; /* CRITICAL */
+      overflow: hidden;
       background: black;
       color: white;
     }
@@ -35,8 +35,8 @@
 
 <div id="hud">
   🌌 Galaxy View<br>
-  Drag = Pan<br>
-  Wheel = Zoom<br>
+  Click star → send fleet<br>
+  Drag = Pan | Wheel = Zoom<br>
   SPACE = Pause
 </div>
 
@@ -48,6 +48,7 @@ const Simulation = {
   paused: false,
   time: 0,
   stars: [],
+  fleets: [],
   camera: {
     x: 0,
     y: 0,
@@ -71,10 +72,11 @@ resize();
 /* =========================
    GALAXY GENERATION
 ========================= */
-function generateGalaxy(count = 200) {
+function generateGalaxy(count = 150) {
   Simulation.stars = [];
   for (let i = 0; i < count; i++) {
     Simulation.stars.push({
+      id: i,
       x: Math.random() * 5000 - 2500,
       y: Math.random() * 5000 - 2500
     });
@@ -83,7 +85,17 @@ function generateGalaxy(count = 200) {
 generateGalaxy();
 
 /* =========================
-   INPUT HANDLING
+   PLAYER FLEET
+========================= */
+Simulation.fleets.push({
+  x: 0,
+  y: 0,
+  target: null,
+  speed: 200 // units per second
+});
+
+/* =========================
+   INPUT
 ========================= */
 let dragging = false;
 let lastX = 0;
@@ -95,74 +107,100 @@ canvas.addEventListener("mousedown", e => {
   lastY = e.clientY;
 });
 
-window.addEventListener("mouseup", () => {
-  dragging = false;
-});
+window.addEventListener("mouseup", () => dragging = false);
 
 window.addEventListener("mousemove", e => {
   if (!dragging) return;
-
   const dx = (e.clientX - lastX) / Simulation.camera.zoom;
   const dy = (e.clientY - lastY) / Simulation.camera.zoom;
-
   Simulation.camera.x -= dx;
   Simulation.camera.y -= dy;
-
   lastX = e.clientX;
   lastY = e.clientY;
 });
 
 canvas.addEventListener("wheel", e => {
-  e.preventDefault(); // CRITICAL
-  const zoomFactor = 1 - e.deltaY * 0.001;
-  Simulation.camera.zoom *= zoomFactor;
+  e.preventDefault();
+  Simulation.camera.zoom *= (1 - e.deltaY * 0.001);
   Simulation.camera.zoom = Math.max(0.2, Math.min(5, Simulation.camera.zoom));
 }, { passive: false });
 
 window.addEventListener("keydown", e => {
-  if (e.code === "Space") {
-    Simulation.paused = !Simulation.paused;
+  if (e.code === "Space") Simulation.paused = !Simulation.paused;
+});
+
+/* =========================
+   STAR CLICK → MOVE FLEET
+========================= */
+canvas.addEventListener("click", e => {
+  const mx = (e.clientX - canvas.width / 2) / Simulation.camera.zoom + Simulation.camera.x;
+  const my = (e.clientY - canvas.height / 2) / Simulation.camera.zoom + Simulation.camera.y;
+
+  for (const star of Simulation.stars) {
+    const dx = star.x - mx;
+    const dy = star.y - my;
+    if (Math.sqrt(dx * dx + dy * dy) < 10) {
+      Simulation.fleets[0].target = star;
+      break;
+    }
   }
 });
 
 /* =========================
-   MAIN LOOP (TIME-DRIVEN)
+   MAIN LOOP
 ========================= */
 let lastTime = performance.now();
 
 function loop(now) {
-  const delta = (now - lastTime) / 1000;
+  const dt = (now - lastTime) / 1000;
   lastTime = now;
 
   if (!Simulation.paused) {
-    Simulation.time += delta;
+    Simulation.time += dt;
+
+    for (const fleet of Simulation.fleets) {
+      if (fleet.target) {
+        const dx = fleet.target.x - fleet.x;
+        const dy = fleet.target.y - fleet.y;
+        const dist = Math.sqrt(dx * dx + dy * dy);
+
+        if (dist < 5) {
+          fleet.x = fleet.target.x;
+          fleet.y = fleet.target.y;
+          fleet.target = null;
+        } else {
+          fleet.x += (dx / dist) * fleet.speed * dt;
+          fleet.y += (dy / dist) * fleet.speed * dt;
+        }
+      }
+    }
   }
 
   ctx.fillStyle = "black";
   ctx.fillRect(0, 0, canvas.width, canvas.height);
 
+  /* Draw Stars */
   ctx.fillStyle = "white";
   for (const star of Simulation.stars) {
-    const sx =
-      (star.x - Simulation.camera.x) * Simulation.camera.zoom +
-      canvas.width / 2;
-    const sy =
-      (star.y - Simulation.camera.y) * Simulation.camera.zoom +
-      canvas.height / 2;
-
-    if (
-      sx < -20 || sy < -20 ||
-      sx > canvas.width + 20 || sy > canvas.height + 20
-    ) continue;
-
+    const sx = (star.x - Simulation.camera.x) * Simulation.camera.zoom + canvas.width / 2;
+    const sy = (star.y - Simulation.camera.y) * Simulation.camera.zoom + canvas.height / 2;
     ctx.beginPath();
-    ctx.arc(sx, sy, 2 * Simulation.camera.zoom, 0, Math.PI * 2);
+    ctx.arc(sx, sy, 3, 0, Math.PI * 2);
     ctx.fill();
   }
 
-  // Pause indicator
+  /* Draw Fleets */
+  ctx.fillStyle = "cyan";
+  for (const fleet of Simulation.fleets) {
+    const fx = (fleet.x - Simulation.camera.x) * Simulation.camera.zoom + canvas.width / 2;
+    const fy = (fleet.y - Simulation.camera.y) * Simulation.camera.zoom + canvas.height / 2;
+    ctx.beginPath();
+    ctx.arc(fx, fy, 4, 0, Math.PI * 2);
+    ctx.fill();
+  }
+
   if (Simulation.paused) {
-    ctx.fillStyle = "rgba(255,255,255,0.8)";
+    ctx.fillStyle = "white";
     ctx.font = "20px sans-serif";
     ctx.fillText("PAUSED", canvas.width / 2 - 40, canvas.height / 2);
   }
