--- a/index.html
+++ b/index.html
@@ -2,28 +2,25 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Space Empire</title>
+  <title>Space Empire – Stage 1</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      width: 100%;
-      height: 100%;
       overflow: hidden;
       background: black;
       color: white;
+      font-family: sans-serif;
     }
     canvas { display: block; }
     #hud {
       position: fixed;
       top: 10px;
       left: 10px;
-      font-family: sans-serif;
-      font-size: 14px;
       background: rgba(0,0,0,0.6);
-      padding: 8px 10px;
+      padding: 8px;
       border-radius: 4px;
-      user-select: none;
+      font-size: 14px;
     }
   </style>
 </head>
@@ -33,29 +30,16 @@
 
 <div id="hud">
   🌌 Galaxy View<br>
-  🟢 Your Fleet<br>
-  ⚪ Stars<br>
-  Click = preview order<br>
-  Click again = confirm<br>
-  ESC = cancel order<br>
+  🟢 Green = Your Fleet<br>
+  ⚪ White = Stars (visual only)<br>
+  Click = Move fleet anywhere<br>
   Drag = Pan | Wheel = Zoom<br>
   SPACE = Pause
 </div>
 
 <script>
 /* =========================
-   GLOBAL SIMULATION
-========================= */
-const Simulation = {
-  paused: false,
-  time: 0,
-  stars: [],
-  camera: { x: 0, y: 0, zoom: 1 },
-  pendingOrder: null
-};
-
-/* =========================
-   CANVAS SETUP
+   CANVAS
 ========================= */
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
@@ -68,36 +52,40 @@ window.addEventListener("resize", resize);
 resize();
 
 /* =========================
-   GALAXY
+   SIMULATION
 ========================= */
-function generateGalaxy(count = 120) {
-  Simulation.stars = [];
-  for (let i = 0; i < count; i++) {
-    Simulation.stars.push({
-      x: Math.random() * 4000 - 2000,
-      y: Math.random() * 4000 - 2000
-    });
-  }
-}
-generateGalaxy();
+const sim = {
+  paused: false,
+  camera: { x: 0, y: 0, zoom: 1 }
+};
 
 /* =========================
-   PLAYER FLEET
+   STARS (VISUAL ONLY)
+========================= */
+const stars = [];
+for (let i = 0; i < 120; i++) {
+  stars.push({
+    x: Math.random() * 4000 - 2000,
+    y: Math.random() * 4000 - 2000
+  });
+}
+
+/* =========================
+   FLEET
 ========================= */
 const fleet = {
   x: 0,
   y: 0,
-  target: null,
+  targetX: null,
+  targetY: null,
   speed: 300
 };
 
-Simulation.camera.x = fleet.x;
-Simulation.camera.y = fleet.y;
-
 /* =========================
-   INPUT — CAMERA
+   CAMERA INPUT
 ========================= */
-let dragging = false, lastX = 0, lastY = 0;
+let dragging = false;
+let lastX = 0, lastY = 0;
 
 canvas.addEventListener("mousedown", e => {
   dragging = true;
@@ -109,62 +97,57 @@ window.addEventListener("mouseup", () => dragging = false);
 
 window.addEventListener("mousemove", e => {
   if (!dragging) return;
-  const dx = (e.clientX - lastX) / Simulation.camera.zoom;
-  const dy = (e.clientY - lastY) / Simulation.camera.zoom;
-  Simulation.camera.x -= dx;
-  Simulation.camera.y -= dy;
+  sim.camera.x -= (e.clientX - lastX) / sim.camera.zoom;
+  sim.camera.y -= (e.clientY - lastY) / sim.camera.zoom;
   lastX = e.clientX;
   lastY = e.clientY;
 });
 
 canvas.addEventListener("wheel", e => {
   e.preventDefault();
-  Simulation.camera.zoom *= (1 - e.deltaY * 0.001);
-  Simulation.camera.zoom = Math.max(0.3, Math.min(4, Simulation.camera.zoom));
+  sim.camera.zoom *= (1 - e.deltaY * 0.001);
+  sim.camera.zoom = Math.max(0.3, Math.min(4, sim.camera.zoom));
 }, { passive: false });
 
 /* =========================
-   INPUT — COMMANDS
+   CLICK = MOVE ANYWHERE
 ========================= */
 canvas.addEventListener("click", e => {
-  const wx =
-    (e.clientX - canvas.width / 2) / Simulation.camera.zoom +
-    Simulation.camera.x;
-  const wy =
-    (e.clientY - canvas.height / 2) / Simulation.camera.zoom +
-    Simulation.camera.y;
+  const worldX =
+    (e.clientX - canvas.width / 2) / sim.camera.zoom + sim.camera.x;
+  const worldY =
+    (e.clientY - canvas.height / 2) / sim.camera.zoom + sim.camera.y;
 
-  if (!Simulation.pendingOrder) {
-    Simulation.pendingOrder = { x: wx, y: wy };
-  } else {
-    fleet.target = Simulation.pendingOrder;
-    Simulation.pendingOrder = null;
-  }
-});
-
-window.addEventListener("keydown", e => {
-  if (e.code === "Space") Simulation.paused = !Simulation.paused;
-  if (e.code === "Escape") Simulation.pendingOrder = null;
+  fleet.targetX = worldX;
+  fleet.targetY = worldY;
 });
 
 /* =========================
-   MAIN LOOP
+   KEYS
 ========================= */
-let lastTime = performance.now();
+window.addEventListener("keydown", e => {
+  if (e.code === "Space") sim.paused = !sim.paused;
+});
+
+/* =========================
+   LOOP
+========================= */
+let last = performance.now();
 
 function loop(now) {
-  const dt = (now - lastTime) / 1000;
-  lastTime = now;
+  const dt = (now - last) / 1000;
+  last = now;
 
-  if (!Simulation.paused && fleet.target) {
-    const dx = fleet.target.x - fleet.x;
-    const dy = fleet.target.y - fleet.y;
+  if (!sim.paused && fleet.targetX !== null) {
+    const dx = fleet.targetX - fleet.x;
+    const dy = fleet.targetY - fleet.y;
     const dist = Math.hypot(dx, dy);
 
     if (dist < 5) {
-      fleet.x = fleet.target.x;
-      fleet.y = fleet.target.y;
-      fleet.target = null;
+      fleet.x = fleet.targetX;
+      fleet.y = fleet.targetY;
+      fleet.targetX = null;
+      fleet.targetY = null;
     } else {
       fleet.x += (dx / dist) * fleet.speed * dt;
       fleet.y += (dy / dist) * fleet.speed * dt;
@@ -174,47 +157,26 @@ function loop(now) {
   ctx.fillStyle = "black";
   ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-  /* Stars */
+  // Stars
   ctx.fillStyle = "white";
-  for (const s of Simulation.stars) {
-    const sx = (s.x - Simulation.camera.x) * Simulation.camera.zoom + canvas.width / 2;
-    const sy = (s.y - Simulation.camera.y) * Simulation.camera.zoom + canvas.height / 2;
+  for (const s of stars) {
+    const sx = (s.x - sim.camera.x) * sim.camera.zoom + canvas.width / 2;
+    const sy = (s.y - sim.camera.y) * sim.camera.zoom + canvas.height / 2;
     ctx.beginPath();
     ctx.arc(sx, sy, 4, 0, Math.PI * 2);
     ctx.fill();
   }
 
-  /* Pending Order Arrow */
-  if (Simulation.pendingOrder) {
-    const px = (Simulation.pendingOrder.x - Simulation.camera.x) * Simulation.camera.zoom + canvas.width / 2;
-    const py = (Simulation.pendingOrder.y - Simulation.camera.y) * Simulation.camera.zoom + canvas.height / 2;
-    const fx = (fleet.x - Simulation.camera.x) * Simulation.camera.zoom + canvas.width / 2;
-    const fy = (fleet.y - Simulation.camera.y) * Simulation.camera.zoom + canvas.height / 2;
-
-    ctx.strokeStyle = "red";
-    ctx.setLineDash([5, 5]);
-    ctx.beginPath();
-    ctx.moveTo(fx, fy);
-    ctx.lineTo(px, py);
-    ctx.stroke();
-    ctx.setLineDash([]);
-
-    ctx.fillStyle = "red";
-    ctx.beginPath();
-    ctx.arc(px, py, 6, 0, Math.PI * 2);
-    ctx.fill();
-  }
-
-  /* Fleet */
-  const fx = (fleet.x - Simulation.camera.x) * Simulation.camera.zoom + canvas.width / 2;
-  const fy = (fleet.y - Simulation.camera.y) * Simulation.camera.zoom + canvas.height / 2;
+  // Fleet
+  const fx = (fleet.x - sim.camera.x) * sim.camera.zoom + canvas.width / 2;
+  const fy = (fleet.y - sim.camera.y) * sim.camera.zoom + canvas.height / 2;
 
   ctx.fillStyle = "lime";
   ctx.beginPath();
   ctx.arc(fx, fy, 8, 0, Math.PI * 2);
   ctx.fill();
 
-  if (Simulation.paused) {
+  if (sim.paused) {
     ctx.fillStyle = "white";
     ctx.font = "20px sans-serif";
     ctx.fillText("PAUSED", canvas.width / 2 - 40, canvas.height / 2);
