--- a/index.html
+++ b/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Space Empire – Stage 1</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background: black;
-      color: white;
-      font-family: sans-serif;
-    }
-    canvas { display: block; }
-    #hud {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      background: rgba(0,0,0,0.6);
-      padding: 8px;
-      border-radius: 4px;
-      font-size: 14px;
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>Space Empire – Galaxy Prototype</title>
+<style>
+  body {
+    margin: 0;
+    overflow: hidden;
+    background: black;
+    font-family: Arial, sans-serif;
+    color: white;
+  }
+  canvas {
+    display: block;
+  }
+  .hud {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    font-size: 14px;
+    line-height: 1.4em;
+    user-select: none;
+  }
+</style>
 </head>
 <body>
 
-<canvas id="game"></canvas>
-
-<div id="hud">
+<div class="hud">
   🌌 Galaxy View<br>
   🟢 Green = Your Fleet<br>
-  ⚪ White = Stars (visual only)<br>
-  Click = Move fleet anywhere<br>
+  ⚪ White = Stars<br>
+  Click = preview order<br>
+  Click again = confirm<br>
+  ESC = cancel order<br>
   Drag = Pan | Wheel = Zoom<br>
   SPACE = Pause
 </div>
 
+<canvas id="game"></canvas>
+
 <script>
-/* =========================
-   CANVAS
-========================= */
+/* =======================
+   CANVAS & CAMERA
+======================= */
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
@@ -51,141 +53,197 @@ function resize() {
 window.addEventListener("resize", resize);
 resize();
 
-/* =========================
-   SIMULATION
-========================= */
-const sim = {
-  paused: false,
-  camera: { x: 0, y: 0, zoom: 1 }
+const camera = {
+  x: 0,
+  y: 0,
+  zoom: 1
 };
 
-/* =========================
-   STARS (VISUAL ONLY)
-========================= */
+/* =======================
+   GLOBAL SIM STATE
+======================= */
+const Simulation = {
+  paused: false
+};
+
+/* =======================
+   WORLD OBJECTS
+======================= */
 const stars = [];
-for (let i = 0; i < 120; i++) {
+for (let i = 0; i < 60; i++) {
   stars.push({
-    x: Math.random() * 4000 - 2000,
-    y: Math.random() * 4000 - 2000
+    x: (Math.random() - 0.5) * 4000,
+    y: (Math.random() - 0.5) * 4000
   });
 }
 
-/* =========================
-   FLEET
-========================= */
+const FleetState = {
+  IDLE: "IDLE",
+  MOVING: "MOVING",
+  ARRIVED: "ARRIVED"
+};
+
 const fleet = {
   x: 0,
   y: 0,
-  targetX: null,
-  targetY: null,
-  speed: 300
+  speed: 2,
+  target: null,
+  state: FleetState.IDLE
 };
 
-/* =========================
-   CAMERA INPUT
-========================= */
-let dragging = false;
-let lastX = 0, lastY = 0;
+/* =======================
+   INPUT STATE
+======================= */
+let isDragging = false;
+let lastMouse = { x: 0, y: 0 };
+let previewTarget = null;
 
+/* =======================
+   INPUT HANDLERS
+======================= */
 canvas.addEventListener("mousedown", e => {
-  dragging = true;
-  lastX = e.clientX;
-  lastY = e.clientY;
+  isDragging = true;
+  lastMouse.x = e.clientX;
+  lastMouse.y = e.clientY;
 });
 
-window.addEventListener("mouseup", () => dragging = false);
+canvas.addEventListener("mousemove", e => {
+  if (!isDragging) return;
+  const dx = e.clientX - lastMouse.x;
+  const dy = e.clientY - lastMouse.y;
+  camera.x -= dx / camera.zoom;
+  camera.y -= dy / camera.zoom;
+  lastMouse.x = e.clientX;
+  lastMouse.y = e.clientY;
+});
 
-window.addEventListener("mousemove", e => {
-  if (!dragging) return;
-  sim.camera.x -= (e.clientX - lastX) / sim.camera.zoom;
-  sim.camera.y -= (e.clientY - lastY) / sim.camera.zoom;
-  lastX = e.clientX;
-  lastY = e.clientY;
+canvas.addEventListener("mouseup", () => {
+  isDragging = false;
 });
 
 canvas.addEventListener("wheel", e => {
-  e.preventDefault();
-  sim.camera.zoom *= (1 - e.deltaY * 0.001);
-  sim.camera.zoom = Math.max(0.3, Math.min(4, sim.camera.zoom));
-}, { passive: false });
+  const zoomAmount = e.deltaY * -0.001;
+  camera.zoom = Math.min(3, Math.max(0.3, camera.zoom + zoomAmount));
+});
 
-/* =========================
-   CLICK = MOVE ANYWHERE
-========================= */
 canvas.addEventListener("click", e => {
-  const worldX =
-    (e.clientX - canvas.width / 2) / sim.camera.zoom + sim.camera.x;
-  const worldY =
-    (e.clientY - canvas.height / 2) / sim.camera.zoom + sim.camera.y;
+  const world = screenToWorld(e.clientX, e.clientY);
 
-  fleet.targetX = worldX;
-  fleet.targetY = worldY;
+  if (!previewTarget) {
+    previewTarget = world;
+  } else {
+    fleet.target = previewTarget;
+    fleet.state = FleetState.MOVING;
+    previewTarget = null;
+  }
 });
 
-/* =========================
-   KEYS
-========================= */
 window.addEventListener("keydown", e => {
-  if (e.code === "Space") sim.paused = !sim.paused;
+  if (e.code === "Escape") {
+    previewTarget = null;
+  }
+  if (e.code === "Space") {
+    Simulation.paused = !Simulation.paused;
+  }
 });
 
-/* =========================
-   LOOP
-========================= */
-let last = performance.now();
+/* =======================
+   COORD TRANSFORMS
+======================= */
+function worldToScreen(x, y) {
+  return {
+    x: (x - camera.x) * camera.zoom + canvas.width / 2,
+    y: (y - camera.y) * camera.zoom + canvas.height / 2
+  };
+}
 
-function loop(now) {
-  const dt = (now - last) / 1000;
-  last = now;
+function screenToWorld(x, y) {
+  return {
+    x: (x - canvas.width / 2) / camera.zoom + camera.x,
+    y: (y - canvas.height / 2) / camera.zoom + camera.y
+  };
+}
 
-  if (!sim.paused && fleet.targetX !== null) {
-    const dx = fleet.targetX - fleet.x;
-    const dy = fleet.targetY - fleet.y;
-    const dist = Math.hypot(dx, dy);
+/* =======================
+   UPDATE LOGIC
+======================= */
+function updateFleet() {
+  if (Simulation.paused) return;
+  if (fleet.state !== FleetState.MOVING || !fleet.target) return;
 
-    if (dist < 5) {
-      fleet.x = fleet.targetX;
-      fleet.y = fleet.targetY;
-      fleet.targetX = null;
-      fleet.targetY = null;
-    } else {
-      fleet.x += (dx / dist) * fleet.speed * dt;
-      fleet.y += (dy / dist) * fleet.speed * dt;
-    }
+  const dx = fleet.target.x - fleet.x;
+  const dy = fleet.target.y - fleet.y;
+  const dist = Math.hypot(dx, dy);
+
+  if (dist <= fleet.speed) {
+    fleet.x = fleet.target.x;
+    fleet.y = fleet.target.y;
+    fleet.target = null;
+    fleet.state = FleetState.ARRIVED;
+    return;
   }
 
-  ctx.fillStyle = "black";
-  ctx.fillRect(0, 0, canvas.width, canvas.height);
+  fleet.x += (dx / dist) * fleet.speed;
+  fleet.y += (dy / dist) * fleet.speed;
+}
+
+/* =======================
+   RENDER
+======================= */
+function draw() {
+  ctx.setTransform(1, 0, 0, 1, 0, 0);
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+  ctx.translate(canvas.width / 2, canvas.height / 2);
+  ctx.scale(camera.zoom, camera.zoom);
+  ctx.translate(-camera.x, -camera.y);
 
   // Stars
   ctx.fillStyle = "white";
-  for (const s of stars) {
-    const sx = (s.x - sim.camera.x) * sim.camera.zoom + canvas.width / 2;
-    const sy = (s.y - sim.camera.y) * sim.camera.zoom + canvas.height / 2;
+  stars.forEach(s => {
     ctx.beginPath();
-    ctx.arc(sx, sy, 4, 0, Math.PI * 2);
+    ctx.arc(s.x, s.y, 4, 0, Math.PI * 2);
+    ctx.fill();
+  });
+
+  // Preview order
+  if (previewTarget) {
+    ctx.strokeStyle = "red";
+    ctx.setLineDash([10, 6]);
+    ctx.beginPath();
+    ctx.moveTo(fleet.x, fleet.y);
+    ctx.lineTo(previewTarget.x, previewTarget.y);
+    ctx.stroke();
+    ctx.setLineDash([]);
+    ctx.fillStyle = "red";
+    ctx.beginPath();
+    ctx.arc(previewTarget.x, previewTarget.y, 6, 0, Math.PI * 2);
     ctx.fill();
   }
 
   // Fleet
-  const fx = (fleet.x - sim.camera.x) * sim.camera.zoom + canvas.width / 2;
-  const fy = (fleet.y - sim.camera.y) * sim.camera.zoom + canvas.height / 2;
-
   ctx.fillStyle = "lime";
   ctx.beginPath();
-  ctx.arc(fx, fy, 8, 0, Math.PI * 2);
+  ctx.arc(fleet.x, fleet.y, 8, 0, Math.PI * 2);
   ctx.fill();
 
-  if (sim.paused) {
-    ctx.fillStyle = "white";
-    ctx.font = "20px sans-serif";
-    ctx.fillText("PAUSED", canvas.width / 2 - 40, canvas.height / 2);
-  }
+  ctx.fillStyle = "lime";
+  ctx.fillText("Your Fleet (" + fleet.state + ")", fleet.x + 12, fleet.y - 12);
+}
 
+/* =======================
+   LOOP
+======================= */
+function loop() {
+  updateFleet();
+  if (fleet.state === FleetState.ARRIVED) {
+    fleet.state = FleetState.IDLE;
+  }
+  draw();
   requestAnimationFrame(loop);
 }
 
-requestAnimationFrame(loop);
+loop();
 </script>
 
 </body>
