--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   ⚪ White = Stars<br>
   Click = preview order<br>
   Click again = confirm<br>
-  ESC = cancel order<br>
+  ESC = cancel preview<br>
   Drag = Pan | Wheel = Zoom<br>
   SPACE = Pause
 </div>
@@ -53,29 +53,20 @@ function resize() {
 window.addEventListener("resize", resize);
 resize();
 
-const camera = {
-  x: 0,
-  y: 0,
-  zoom: 1
-};
+const camera = { x: 0, y: 0, zoom: 1 };
 
 /* =======================
-   GLOBAL SIM STATE
+   SIMULATION STATE
 ======================= */
-const Simulation = {
-  paused: false
-};
+const Simulation = { paused: false };
 
 /* =======================
    WORLD OBJECTS
 ======================= */
-const stars = [];
-for (let i = 0; i < 60; i++) {
-  stars.push({
-    x: (Math.random() - 0.5) * 4000,
-    y: (Math.random() - 0.5) * 4000
-  });
-}
+const stars = Array.from({ length: 60 }, () => ({
+  x: (Math.random() - 0.5) * 4000,
+  y: (Math.random() - 0.5) * 4000
+}));
 
 const FleetState = {
   IDLE: "IDLE",
@@ -103,30 +94,25 @@ let previewTarget = null;
 ======================= */
 canvas.addEventListener("mousedown", e => {
   isDragging = true;
-  lastMouse.x = e.clientX;
-  lastMouse.y = e.clientY;
+  lastMouse = { x: e.clientX, y: e.clientY };
 });
 
 canvas.addEventListener("mousemove", e => {
   if (!isDragging) return;
-  const dx = e.clientX - lastMouse.x;
-  const dy = e.clientY - lastMouse.y;
-  camera.x -= dx / camera.zoom;
-  camera.y -= dy / camera.zoom;
-  lastMouse.x = e.clientX;
-  lastMouse.y = e.clientY;
+  camera.x -= (e.clientX - lastMouse.x) / camera.zoom;
+  camera.y -= (e.clientY - lastMouse.y) / camera.zoom;
+  lastMouse = { x: e.clientX, y: e.clientY };
 });
 
-canvas.addEventListener("mouseup", () => {
-  isDragging = false;
-});
+canvas.addEventListener("mouseup", () => isDragging = false);
 
 canvas.addEventListener("wheel", e => {
-  const zoomAmount = e.deltaY * -0.001;
-  camera.zoom = Math.min(3, Math.max(0.3, camera.zoom + zoomAmount));
+  camera.zoom = Math.min(3, Math.max(0.3, camera.zoom - e.deltaY * 0.001));
 });
 
 canvas.addEventListener("click", e => {
+  if (Simulation.paused) return;
+
   const world = screenToWorld(e.clientX, e.clientY);
 
   if (!previewTarget) {
@@ -139,24 +125,13 @@ canvas.addEventListener("click", e => {
 });
 
 window.addEventListener("keydown", e => {
-  if (e.code === "Escape") {
-    previewTarget = null;
-  }
-  if (e.code === "Space") {
-    Simulation.paused = !Simulation.paused;
-  }
+  if (e.code === "Escape") previewTarget = null;
+  if (e.code === "Space") Simulation.paused = !Simulation.paused;
 });
 
 /* =======================
-   COORD TRANSFORMS
+   COORDINATES
 ======================= */
-function worldToScreen(x, y) {
-  return {
-    x: (x - camera.x) * camera.zoom + canvas.width / 2,
-    y: (y - camera.y) * camera.zoom + canvas.height / 2
-  };
-}
-
 function screenToWorld(x, y) {
   return {
     x: (x - canvas.width / 2) / camera.zoom + camera.x,
@@ -165,7 +140,7 @@ function screenToWorld(x, y) {
 }
 
 /* =======================
-   UPDATE LOGIC
+   UPDATE
 ======================= */
 function updateFleet() {
   if (Simulation.paused) return;
@@ -188,13 +163,13 @@ function updateFleet() {
 }
 
 /* =======================
-   RENDER
+   DRAW
 ======================= */
 function draw() {
-  ctx.setTransform(1, 0, 0, 1, 0, 0);
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  ctx.setTransform(1,0,0,1,0,0);
+  ctx.clearRect(0,0,canvas.width,canvas.height);
 
-  ctx.translate(canvas.width / 2, canvas.height / 2);
+  ctx.translate(canvas.width/2, canvas.height/2);
   ctx.scale(camera.zoom, camera.zoom);
   ctx.translate(-camera.x, -camera.y);
 
@@ -202,33 +177,34 @@ function draw() {
   ctx.fillStyle = "white";
   stars.forEach(s => {
     ctx.beginPath();
-    ctx.arc(s.x, s.y, 4, 0, Math.PI * 2);
+    ctx.arc(s.x, s.y, 4, 0, Math.PI*2);
     ctx.fill();
   });
 
-  // Preview order
+  // Preview
   if (previewTarget) {
+    ctx.setLineDash([10,6]);
     ctx.strokeStyle = "red";
-    ctx.setLineDash([10, 6]);
     ctx.beginPath();
     ctx.moveTo(fleet.x, fleet.y);
     ctx.lineTo(previewTarget.x, previewTarget.y);
     ctx.stroke();
     ctx.setLineDash([]);
+
     ctx.fillStyle = "red";
     ctx.beginPath();
-    ctx.arc(previewTarget.x, previewTarget.y, 6, 0, Math.PI * 2);
+    ctx.arc(previewTarget.x, previewTarget.y, 6, 0, Math.PI*2);
     ctx.fill();
   }
 
   // Fleet
   ctx.fillStyle = "lime";
   ctx.beginPath();
-  ctx.arc(fleet.x, fleet.y, 8, 0, Math.PI * 2);
+  ctx.arc(fleet.x, fleet.y, 8, 0, Math.PI*2);
   ctx.fill();
 
   ctx.fillStyle = "lime";
-  ctx.fillText("Your Fleet (" + fleet.state + ")", fleet.x + 12, fleet.y - 12);
+  ctx.fillText(`Your Fleet (${fleet.state})`, fleet.x + 12, fleet.y - 12);
 }
 
 /* =======================
@@ -236,13 +212,10 @@ function draw() {
 ======================= */
 function loop() {
   updateFleet();
-  if (fleet.state === FleetState.ARRIVED) {
-    fleet.state = FleetState.IDLE;
-  }
+  if (fleet.state === FleetState.ARRIVED) fleet.state = FleetState.IDLE;
   draw();
   requestAnimationFrame(loop);
 }
-
 loop();
 </script>
 
